# 3d_detection_kit

./: .gitignore  CMakeLists.txt  draw_image_lidar_fusion.py  filter_ground.py  gen_bev_image.cpp  gen_bev_image.py  lidar_object_detect.cpp  readme.md  show_pc_maya.py  show_pc_open3d.py
data/: 动作捕捉v1架构.drawio
vis_3d/: fusion_3d.py  vis_3d_mlab.py
